--- a/SSFR_Movies/SSFR_Movies/Views/FavoritesMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/FavoritesMoviesPage.xaml
@@ -40,13 +40,12 @@
                 CachingStrategy="RecycleElementAndDataTemplate"
                 RefreshControlColor="Blue"
                 HasUnevenRows="True"
-                x:DataType="vm:FavoriteMoviesPageViewModel"
                 HorizontalOptions="FillAndExpand"
                 ItemTapped="ItemSelected"
                 ItemsSource="{Binding FavMoviesList.Value}"
                 RowHeight="350">
                 <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="vm:FavoriteMoviesPageViewModel">
+                    <DataTemplate>
                         <helpers:CustomViewCellFavPage>
                             <!--    -->
                         </helpers:CustomViewCellFavPage>
