--- a/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
@@ -73,7 +73,28 @@
                                         Orientation="Vertical"
                                         Margin="0,0,8,0"
                                         VerticalOptions="Start">
-                                       
+                                        <StackLayout
+                                            Margin="0"
+                                            HorizontalOptions="End"
+                                            Orientation="Horizontal">
+                                            <StackLayout.GestureRecognizers>
+                                                <TapGestureRecognizer Tapped="StreamMovie_Tapped" />
+                                            </StackLayout.GestureRecognizers>
+                                            <ffimage:CachedImage
+                                                DownsampleToViewSize="True"
+                                                HeightRequest="35"
+                                                Source="Play.png"
+                                                WidthRequest="35" />
+                                            <Label
+                                                Margin="5,0,0,0"
+                                                FontAttributes="Bold"
+                                                FontSize="Small"
+                                                HorizontalTextAlignment="End"
+                                                LineBreakMode="NoWrap"
+                                                Text="Play Movie"
+                                                TextColor="White"
+                                                VerticalTextAlignment="Center" />   
+                                        </StackLayout>
                                         <StackLayout HorizontalOptions="Start" Orientation="Horizontal">
                                             <ffimage:CachedImage
                                                 x:Name="AddToFav"
