Some changes Review ApiClient file

--- a/SSFR_Movies/SSFR_Movies/Views/StartPagexaml.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/StartPagexaml.xaml
@@ -9,6 +9,7 @@
             <ActivityIndicator
                 x:Name="ActIndicator"
                 Color="#006FDE"
+                Visual="Material"
                 IsVisible="True"
                 IsRunning="True"
                 VerticalOptions="CenterAndExpand"
