--- a/SSFR_Movies/SSFR_Movies/Views/AppShell.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AppShell.xaml
@@ -3,7 +3,7 @@
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
        xmlns:local="clr-namespace:SSFR_Movies.Views"
        Title="SSFR Movies Home"
-       RouteHost="ssfr.com"
+       RouteHost="ssfr"
        RouteScheme="app"
        NavigationPage.HasNavigationBar="False"
        Route="SSFR_Movies"
@@ -28,15 +28,18 @@
         </ResourceDictionary>
     </Shell.Resources>
     <ShellItem>
-        <ShellSection Title="All" Icon="Recent.png">
+        <ShellSection Title="All" Route="home" Icon="Recent.png">
             <ShellContent ContentTemplate="{DataTemplate local:AllMoviesPage}"/>
+            <!--<ShellContent>
+                <local:AllMoviesPage/>
+            </ShellContent>-->
         </ShellSection>
-        <ShellSection Title="Favorites" Icon="Heart.png" >
+        <ShellSection Title="Favorites" Route="favorites" Icon="Heart.png" >
             <ShellContent>
                 <local:FavoritesMoviesPage/>
             </ShellContent>
         </ShellSection>
-        <ShellSection Title="About" Icon="About.png">
+        <ShellSection Title="About" Route="about" Icon="About.png">
             <ShellContent ContentTemplate="{DataTemplate local:About}"/>
         </ShellSection>
     </ShellItem>
