--- a/SSFR_Movies/SSFR_Movies/Views/AppShell.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AppShell.xaml
@@ -3,10 +3,10 @@
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
        xmlns:local="clr-namespace:SSFR_Movies.Views"
        Title="SSFR Movies Home"
-       RouteHost="ssfr"
        RouteScheme="app"
+       RouteHost="ssfr.com"
+       Route="ssfrmovies"
        NavigationPage.HasNavigationBar="False"
-       Route="SSFR_Movies"
        NavigationPage.HasBackButton="False"
        FlyoutBehavior="Disabled"
        x:Class="SSFR_Movies.Views.AppShell">
@@ -29,12 +29,13 @@
     </Shell.Resources>
     <ShellItem>
         <ShellSection Title="All" Route="home" Icon="Recent.png">
-            <ShellContent ContentTemplate="{DataTemplate local:AllMoviesPage}"/>
-            <!--<ShellContent>
+            <!--<ShellContent ContentTemplate="{DataTemplate local:AllMoviesPage}"/>-->
+            <ShellContent>
                 <local:AllMoviesPage/>
-            </ShellContent>-->
+            </ShellContent>
         </ShellSection>
         <ShellSection Title="Favorites" Route="favorites" Icon="Heart.png" >
+            <!--<ShellContent ContentTemplate="{DataTemplate local:FavoritesMoviesPage}"/>-->
             <ShellContent>
                 <local:FavoritesMoviesPage/>
             </ShellContent>
