--- a/SSFR_Movies/SSFR_Movies/Views/SearchPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/SearchPage.xaml
@@ -54,40 +54,15 @@
                 WidthRequest="40"
                 Color="White" />
 
-            <CollectionView x:Name="MoviesList" x:DataType="vm:AllMoviesPageViewModel" IsVisible="{Binding ListVisible}" Visual="Material" WidthRequest="{Binding Source={x:Reference Content}, Path= WidthRequest}">
+            <CollectionView x:Name="MoviesList" IsVisible="{Binding ListVisible}" SelectionMode="Single" Visual="Material" WidthRequest="{Binding Source={x:Reference Content}, Path= WidthRequest}">
                 <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="vm:AllMoviesPageViewModel">
+                    <DataTemplate>
                         <StackLayout CompressedLayout.IsHeadless="True">
-                            <helpers:CustomViewCell HeightRequest="350"/>
+                            <helpers:CustomViewCell HeightRequest="350" CompressedLayout.IsHeadless="True"/>
                         </StackLayout>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
-
-            <!--<ListView
-                x:Name="MoviesList"
-                CachingStrategy="RecycleElementAndDataTemplate"
-                HasUnevenRows="True"
-                IsPullToRefreshEnabled="True"
-                IsRefreshing="{Binding IsRefreshing}"
-                IsVisible="{Binding ListVisible}"
-                ItemTapped="ItemSelected"
-                RefreshCommand="{Binding FillUpMoviesListAfterRefreshCommand}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-
-                        <StackLayout CompressedLayout.IsHeadless="True">
-                            <helpers:CustomViewCell>
-                                
-                                -->
-            <!----><!--
-                                
-                            </helpers:CustomViewCell>
-                        </StackLayout>
-                       
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>-->
 
             <!--<helpers:AdMobView AdUnitId="ca-app-pub-3940256099942544/6300978111" />-->
             <helpers:AdMobView AdUnitId="ca-app-pub-7678114811413714/1246889210" />
