Refactor: Initial effort restarted.

--- a/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
@@ -18,7 +18,7 @@
     <ContentPage.Content>
         <StackLayout x:Name="stack">
             <StackLayout.GestureRecognizers>
-                <SwipeGestureRecognizer  Direction="Right" Swiped="stackSwiped"/>
+                <SwipeGestureRecognizer  Direction="Right" Swiped="StackSwiped"/>
             </StackLayout.GestureRecognizers>
             
             <ScrollView x:Name="scroll">
